examples/test/testpolicy5296.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5296
  namespace: namespace328
spec:
  podSelector:
    matchLabels:
      key32: value34
      key41: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value25
          key41: value13
      podSelector:
        matchLabels:
          key21: value25
          key25: value3
